# iptablesweb

./: Cargo.toml  LICENSE  README.md  iptables
.github/workflows/: rust.yml
src/: errors.rs  iptables.rs  main.rs  test_main.rs  webserver_main.rs
src/iptables/: chain.rs  counter.rs  parse.rs  rule.rs  table.rs
web/: index.html  iptables  package-lock.json  package.json
web/src/: App.svelte  Chain.svelte  Table.svelte  Tables.svelte  app.pcss  iptables.js  tooltip.js
