[package]
name = "iptablesweb"
version = "1.0.0"

# Rust edition needed to build
edition = "2021"


[dependencies]
tokio = { version = "1.27", features = ["full"] }
anyhow = { version = "1.0.40" }
thiserror = "1.0.24"
once_cell = "1.17.0"
regex = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
warp-embed = "0.4"
rust-embed = "6"
log = "0.4"
env_logger = "0.10"